druplicon overlapping date on smaller width browser issue
Issue: https://github.com/vaibhavjain-in/dcd/issues/8

--- a/docroot/themes/dcd16/css/style.css
+++ b/docroot/themes/dcd16/css/style.css
@@ -9377,7 +9377,7 @@ article .field--name-field-track .field__items {
   display: table-cell;
   width: 100%;
   vertical-align: middle;
-  padding-left: 12%;
+  padding-left: 8%;
 }
 /* line 20, ../assets/sass/_banner.scss */
 #block-frontbanner .field--name-body .banner-inner .header {
